# modern-cpp-homeworks

./: .gitignore  README.md
homework_1/task_1/: commands.sh
homework_1/task_2/: CMakeLists.txt  build.sh  install.sh
homework_1/task_2/src/: CMakeLists.txt
homework_2/task_1/: CMakeLists.txt
homework_2/task_1/src/: main.cpp
homework_2/task_2/: CMakeLists.txt
homework_2/task_2/src/: main.cpp
homework_3/: CMakeLists.txt
homework_3/include/: homework3.hpp
homework_3/src/: CMakeLists.txt  html_writer.cpp  image_browser.cpp  main.cpp
homework_3/web_app/: example2.html
homework_4/: CMakeLists.txt
homework_4/include/: homework_4.h  ipb_algorithm.h  named_vector.h
homework_4/src/: main.cpp
homework_5/: CMakeLists.txt
homework_5/include/: homework5.hpp
homework_5/src/: CMakeLists.txt  convert_dataset.cpp  main.cpp
homework_6/: CMakeLists.txt
homework_6/include/: homework_6.h  image.hpp
homework_6/io_tools/: io_tools.cpp
homework_6/src/: CMakeLists.txt  image.cpp  main.cpp
homework_7/: CMakeLists.txt
homework_7/include/: BowDictionary.hpp  homework_7.h
homework_7/src/: BowDictionary.cpp  CMakeLists.txt  convert_dataset.cpp  kMeans.cpp  main.cpp
homework_8/: CMakeLists.txt
homework_8/include/: homework_8.h  image.hpp
homework_8/include/io_strategies/: dummy_strategy.h  png_strategy.h  ppm_strategy.h
homework_8/task_1/: CMakeLists.txt  main.cpp
homework_8/task_2/: CMakeLists.txt
homework_8/task_2/src/: CMakeLists.txt  image.cpp  main.cpp
homework_8/task_2/src/io_strategies/: CMakeLists.txt  dummy_strategy.cpp  png_strategy.cpp  ppm_strategy.cpp
homework_9/: CMakeLists.txt
homework_9/include/: BowDictionary.hpp  histogram.hpp  homework_9.h  kMeans.h
homework_9/src/: BowDictionary.cpp  CMakeLists.txt  histogram.cpp  main.cpp  serialize.cpp
